--- a/views/set/show.erb
+++ b/views/set/show.erb
@@ -1,4 +1,4 @@
 <h1><%= @set.name %></h1>
 <% @photos.each do |photo| %>
-  <img src="<%= photo.thumb_url(:small) %>">
+  <a href="/photo/<%= photo.id %>"><img src="<%= photo.thumb_url(:small) %>"></a>
 <% end %>
