--- a/views/photo/show.erb
+++ b/views/photo/show.erb
@@ -1,5 +1,11 @@
 <h1><%= @photo.filename %></h1>
+<% if @photo.prev %>
+  <a href="/photo/<%= @photo.prev.id %>"><img src="<%= @photo.prev.thumb_url(:small) %>"></a>
+<% end %>
 <img src="<%= @photo.thumb_url(:big) %>">
+<% if @photo.next %>
+  <a href="/photo/<%= @photo.next.id %>"><img src="<%= @photo.next.thumb_url(:small) %>"></a>
+<% end %>
 <table>
   <tr>
     <th>Filename</th>
