--- a/views/set/show.erb
+++ b/views/set/show.erb
@@ -1,10 +1,10 @@
 <h1><%= @set.name %></h1>
-<%= erb :'_set', locals: { set: @set.prev } if @set.prev %>
-<%= erb :'_set', locals: { set: @set.next } if @set.next %>
+<%= partial 'set', @set.prev if @set.prev %>
+<%= partial 'set', @set.next if @set.next %>
 <% if @photos.any? %>
   <ol>
     <% @photos.each do |photo| %>
-      <li><%= erb :'_photo', locals: { photo: photo } %></li>
+      <li><%= partial 'photo', photo %></li>
     <% end %>
   </ol>
 <% end %>
