--- a/views/_set_thumb.erb
+++ b/views/_set_thumb.erb
@@ -1,4 +1,4 @@
-<a href="/set/<%= set.id %>">
+<a href="/set/<%= set.id %>" title="<%= set.name %>">
   <img src="<%= set.thumb_url(:small) %>" alt="<%= set.name %>">
   <h2><%= set.name %></h2>
   <p><%= pluralize(set.photos.count, 'photo', 'photos') %></p>
