--- a/public/thyme.css
+++ b/public/thyme.css
@@ -1,3 +1,72 @@
 body {
   font-family: sans-serif;
+  margin: 10px;
+  padding: 0;
+}
+
+a {
+  color: #00f;
+}
+
+.flat-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+
+.flat-list li {
+  margin-bottom: 10px;
+  margin-right: 10px;
+  float: left;
+}
+
+.thumb {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  position: relative;
+}
+
+.thumb h2 {
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  padding: 5px 10px;
+  width: 180px;
+  font-size: 13px;
+  font-weight: normal;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.set.thumb p {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 5px;
+  font-size: 11px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+#photo-details {
+  font-size: 13px;
+}
+
+#photo-details th {
+  text-align: right;
+  padding: 5px 10px;
+  background: #ccc;
+}
+
+#photo-details td {
+  padding: 5px 10px;
+  background: #eee;
+}
+
+.big-thumb {
+  float: left;
+  margin-right: 10px;
 }
