--- a/views/_photo_thumb.erb
+++ b/views/_photo_thumb.erb
@@ -1,4 +1,4 @@
-<a href="/set/<%= photo.set.id %>/photo/<%= photo.id %>" title="<%= photo.filename %>">
+<a class="photo thumb" href="/set/<%= photo.set.id %>/photo/<%= photo.id %>" title="<%= photo.filename %>">
   <img src="<%= photo.thumb_url(:small) %>" alt="<%= photo.filename %>">
-  <h2><%= photo.filename %></h2>
+  <h2><%= truncate(photo.filename, 20) %></h2>
 </a>
