--- a/views/set/show.erb
+++ b/views/set/show.erb
@@ -1,8 +1,8 @@
-<h1><%= @set.name %></h1>
 <%= partial 'set_thumb', set: @set.next if @set.next %>
 <%= partial 'set_thumb', set: @set.prev if @set.prev %>
+<h1><%= @set.name %></h1>
 <% if @photos.any? %>
-  <ol>
+  <ol class="flat-list">
     <% @photos.each do |photo| %>
       <li><%= partial 'photo_thumb', photo: photo %></li>
     <% end %>
