--- a/views/_set_thumb.erb
+++ b/views/_set_thumb.erb
@@ -1,7 +1,7 @@
 <a class="set thumb" href="/set/<%= set.id %>" title="<%= set.name %>">
   <img src="<%= set.thumb_url(:small) %>" alt="<%= set.name %>">
   <h2><%= truncate(set.name, 20) %></h2>
-  <p>
+  <p title="<%= pluralize(set.photos.count, 'photo', 'photos') %>">
     <i class="fa fa-picture-o"></i>
     <%= set.photos.count %>
   </p>
