Rewrite in Ember.js

--- a/public/thyme.css
+++ b/public/thyme.css
@@ -36,7 +36,7 @@ a {
   border: 2px solid #fff;
 }
 
-#sets .active a, #photos .active a {
+#sets .active, #photos .active {
   border-color: red;
 }
 
