--- a/public/thyme.css
+++ b/public/thyme.css
@@ -8,37 +8,37 @@ a {
   color: #00f;
 }
 
-.panel {
-  position: absolute;
-  top: 0;
+#pane {
   bottom: 0;
-  overflow-y: auto;
-  width: 219px;
-}
-
-#photos {
-  left: 219px;
-  overflow-y: scroll;
-}
-
-#photo {
-  left: 438px;
+  left: 0;
+  position: absolute;
   right: 0;
-  width: auto;
+  top: 0;
 }
 
-#sets ol, #photos ol {
+#thumbs {
   list-style: none;
   margin: 0;
-  padding: 0;
+  overflow: auto;
+  padding: 10px;
 }
 
-#sets a, #photos a {
-  border: 2px solid #fff;
+#thumbs li {
+  float: left;
+  margin: 10px;
 }
 
-#sets .active, #photos .active {
-  border-color: red;
+#thumbs li img {
+  border-radius: 5px;
+}
+
+#thumbs li h2 {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#thumbs li p {
+  border-top-right-radius: 5px;
 }
 
 .thumb {
