Add navigation to prev/next photo and set

--- a/public/thyme.css
+++ b/public/thyme.css
@@ -63,6 +63,24 @@ a {
   text-align: center;
 }
 
+#prev-photo {
+  left: 0;
+  position: fixed;
+  top: 0;
+}
+
+#parent-set {
+  bottom: 0;
+  left: 0;
+  position: fixed;
+}
+
+#next-photo {
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
 #details {
   font-size: 13px;
   list-style: none;
